# bevy_ios_alerts

./: CHANGELOG.md  Package.swift  README.md  justfile
Sources/bevy_ios_alerts/: bevy_ios_alerts.m
Sources/bevy_ios_alerts/include/: module.map.modulemap
Sources/bevy_ios_popups/: bevy_ios_popups.m
Sources/bevy_ios_popups/include/: bevy_ios_popups.h  module.map.modulemap
Tests/bevy_ios_alertsTests/: bevy_ios_alertsTests.swift
Tests/bevy_ios_popupsTests/: bevy_ios_popupsTests.swift
rust/bevy_ios_alerts/: Cargo.toml  justfile
rust/bevy_ios_alerts/src/: lib.rs  native.rs  native_events.rs
rust/bevy_ios_popups/: Cargo.toml
rust/bevy_ios_popups/src/: lib.rs  native.rs  native_events.rs
